# book-service

./: .gitignore  pyproject.toml
book_service/models/: books.py
book_service/servers/: server.py
book_service/services/: book.py
