[tool.poetry]
name = "book-service"
version = "0.1.0"
description = ""
authors = ["oleksandr.zhukov <oleksandr.zhukov@alertinnovation.com>"]

[tool.poetry.dependencies]
python = "3.8"
grpcio_tools = "1.33.2"
grpcio-reflection = "1.33.2"
SQLAlchemy = "2.0.13"
SQLAlchemy-Wrapper = "1.9.1"
SQLAlchemy-Utils = "0.41.1"

[tool.poetry.dev-dependencies]
books-shared = {path="../books-shared"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

